2008-10-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am control.c sfcb.cfg.pre.in
	Fixed [2158091] sfcb modules belong in private dir

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* httpAdapter.c
	Corrected data type for maxLen (See [ 2172888 ])

2008-10-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/xmltest.sh removed test/xmltest/*.OK 
		added test/xmltest/*.lines
	Fixed [2175401] xml tests too verbose

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c
	Fixed [ 2175507 ] sockaddr_un not allocated for localconnect server

2008-10-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* indCIMXMLExport.c
	Fixed [ 2175426 ] possible int overflow

2008-10-16 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* control.c, httpAdapter.c
	Fixed [ 2172888 ] http content-length is not constrained

2008-10-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c mlog.c msgqueue.c providerDrv.c providerMgr.c
	Fixed [2172023] mlogf call cleanups

2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* sqlLexer.l
	Fixed [2169607] sqlLexer assumes line lengths under MAXBUF

2008-10-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	Fixed [ 2169527 ] Some XML parsing error strings do not have sufficient
	space

	* objectImpl.h:
	Fixed [ 2168834 ] sfcbmof unaligned access when installing sblim-sfcb
	(Fix found by Bart Whitely)
	
2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimslpCMPI.c, httpAdapter.c, providerDrv.c, support.c
	Fixed [2169532] sprintf doesn't check size of buffer

2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c
	Fixed [2169514] spRcvMsg doesn't check malloc return

2008-10-14 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/Makefile.am configure.ac sfcb/test/unittest/Makefile.am
	Fixed [2150019] sfcb test suite, added optional unittest 
		structure.

2008-10-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c: